--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
@@ -129,22 +129,26 @@
                         {% include "patterns/organisms/accordion-block/accordion-block.html" with accordion_id='1' accordions=page.more_information title=page.more_information_title %}
                     </div>
                 {% endif %}
-
-                <div class="section__notch">
-                    <div class="section__notch-fill section__notch-fill--second-col"></div>
-                </div>
+                
+                {% if related_students or page.related_links %}
+                    <div class="section__notch">
+                        <div class="section__notch-fill section__notch-fill--second-col"></div>
+                    </div>
+                {% endif %}
 
             </section>
 
-            <section class="section section--top-space bg bg--light">
-                {% if related_students %}
-                    {% include "patterns/organisms/student-listing/student-listing-api.html" with student_listing=related_students %}
-                {% endif %}
+            {% if related_students or page.related_links %}
+                <section class="section section--top-space bg bg--light">
+                    {% if related_students %}
+                        {% include "patterns/organisms/student-listing/student-listing-api.html" with student_listing=related_students %}
+                    {% endif %}
 
-                {% if page.related_links %}
-                    {% include "patterns/organisms/related-links/related-links.html" with related_links=page.related_links title="External links" %}
-                {% endif %}
-            </section>
+                    {% if page.related_links %}
+                        {% include "patterns/organisms/related-links/related-links.html" with related_links=page.related_links title="External links" %}
+                    {% endif %}
+                </section>
+            {% endif %}
 
         </div>
 
