Fixing type in result_count

--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -79,7 +79,7 @@
                         <div class="results-total heading heading--four layout__start-one layout__span-two layout__@large-start-two">
                             <span class="results-total__anchor" id="results"></span>
                             <span class="results-total__type">Results</span>
-                            <span class="results-total__number">{{ results_count }}</span>
+                            <span class="results-total__number">{{ result_count }}</span>
                         </div>
                     </div>
                 {% endif %}
