#522 - missing variable from template

--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
@@ -144,7 +144,7 @@
                 <section class="section bg bg--light">
 
                     <div class="section__row section__row--first section__row--last">
-                        {% include "patterns/organisms/people-module/people-module.html" with title="Staff" people=related_staff %}
+                        {% include "patterns/organisms/people-module/people-module.html" with title=staff_title people=related_staff %}
                     </div>
 
                     <div class="section__notch">
