#524 incorrect template variable

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--centre.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--centre.html
@@ -9,7 +9,7 @@
                 {% if page.primary_staff_name %}
                     <li class="key-details__list-item">
                         {% if page.primary_staff_url %}
-                            <a href="{{ item.link }}" class="link link--tertiary">
+                            <a href="{{ page.primary_staff_url }}" class="link link--tertiary">
                         {% endif %}
                         {{ page.primary_staff_name }}
                         {% if page.primary_staff_url %}
