--- a/rca/project_styleguide/templates/patterns/molecules/navigation/standoutnav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/navigation/standoutnav.html
@@ -16,7 +16,7 @@
     </li>
     {% if not settings.utils.ProgrammeSettings.disable_apply_tab %}
         <li>
-            <a class="nav__link nav__link--base nav__link--standout link link--link" href="https://applications.rca.ac.uk/">
+            <a class="nav__link nav__link--base nav__link--standout link link--link" href="//applications.rca.ac.uk/">
                 <span class="link__label">Visit our application portal</span>
                 <svg width="12px" height="8px" class="link__icon"><use xlink:href="#arrow"></use></svg>
             </a>
