--- a/rca/static_src/sass/components/_profile-teaser.scss
+++ b/rca/static_src/sass/components/_profile-teaser.scss
@@ -11,6 +11,10 @@
         }
 
         &--link {
+            #{$root}__heading {
+                @include underline-hover-target();
+            }
+
             &:hover,
             &:focus,
             &:active {
@@ -19,7 +23,7 @@
                 }
 
                 #{$root}__heading {
-                    @include underline-hover();
+                    @include underline-hover-target-reset();
                 }
             }
         }
@@ -42,26 +46,25 @@
             top: -4px; // Align top of text with image
             padding-right: $gutter;
         }
-    }
-
-    &__heading {
-        display: inline-block;
-        position: relative;
-        word-break: break-word; // ensure long names wrap
-        margin-bottom: ($gutter / 4);
 
         @include media-query(large) {
             line-height: 1.3;
         }
     }
 
+    &__heading {
+        display: inline;
+        word-break: break-word;
+        word-spacing: 200px;
+    }
+
     &__meta {
         font-family: $font--primary;
         margin: 0;
-    }
 
-    &__surname {
-        display: block;
+        &--first {
+            margin-top: ($gutter / 4);
+        }
     }
 
     .student-listing & {
