--- a/rca/project_styleguide/templates/patterns/molecules/categories-tablist/categories-tablist.html
+++ b/rca/project_styleguide/templates/patterns/molecules/categories-tablist/categories-tablist.html
@@ -7,15 +7,17 @@
     <div class="categories-tablist__options" role="tablist">
         {% for item in value.items %}
             <a id="{% if item.tab_title %}tab-{{ item.tab_title|slugify }}{% else %}{{ forloop.counter }}-tab{% endif %}" href="{% if item.tab_title %}#{{ item.tab_title|slugify }}{% else %}{{ item.href }}{% endif %}" class="categories-tablist__tab {% if item.selected %}categories-tablist__tab--selected{% endif %} {% if item.tab_title %}js-tab-item{% endif %} body body--one" role="tab" aria-selected="{% if item.selected %}true{% else %}false{% endif %}" aria-controls="{% if item.tab_title %}{{ item.tab_title }}{% else %}{{ item.title }}{% endif %}" {% if item.tab_title %}data-tab="{{ item.tab_title|slugify }}"{% endif %} data-project-category>
-                {% if item.tab_title %}
-                    <div class="categories-tablist__tab-label">
-                        {{ item.tab_title }}
-                    </div>
-                    <svg width="6" height="10" class="categories-tablist__tab-icon" aria-hidden="true">
-                        <use xlink:href="#chevron"></use>
-                    </svg>
-                {% else %}
-                    {{ item.title }}
+                {% if item.queryset %}
+                    {% if item.tab_title %}
+                        <div class="categories-tablist__tab-label">
+                            {{ item.tab_title }}
+                        </div>
+                        <svg width="6" height="10" class="categories-tablist__tab-icon" aria-hidden="true">
+                            <use xlink:href="#chevron"></use>
+                        </svg>
+                    {% else %}
+                        {{ item.title }}
+                    {% endif %}
                 {% endif %}
             </a>
         {% endfor %}
