Space for project card if no school

--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -150,6 +150,12 @@
         }
     }
 
+    &--notch-space {
+        #{$root}__content {
+            padding-top: ($gutter * 1.5);
+        }
+    }
+
     &--staff {
         margin-bottom: ($gutter * 2);
 
