--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
@@ -84,11 +84,12 @@
                         <div class="section__content grid">
                             {% include "patterns/organisms/carousel/carousel.html" with carousel=projects modifier='carousel carousel--no-margin' datatag='data-carousel' %}
                             <div class="section__action">
-                                <a class="link link--primary link--link body body--two" href="/research/projects/?school-or-centre={{ page.slug }}#results">
-
+                            {% if page.research_projects_link %}
+                                <a class="link link--primary link--link body body--two" href="{{ page.research_projects_link }}">
                                     <span class="link__label">See all research</span>
                                     <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                                 </a>
+                            {% endif %}
                             </div>
                         </div>
                     </div>
