Don't allow this to get flagged as empty

--- a/rca/project_styleguide/templates/patterns/molecules/sitewide-alert/sitewide-alert.html
+++ b/rca/project_styleguide/templates/patterns/molecules/sitewide-alert/sitewide-alert.html
@@ -1,7 +1,7 @@
 {% load wagtailcore_tags %}
 
 <div class="sitewide-alert" data-sitewide-alert data-sitewide-alert-close>
-    <button data-sitewide-alert-close class="sitewide-alert__close">
+    <button data-sitewide-alert-close class="sitewide-alert__close" aria-label="Close alert">
         <svg class="sitewide-alert__close-icon" width="20" height="20"><use xlink:href="#close"></use></svg>
     </button>
     <div class="sitewide-alert__modal">
