--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
@@ -24,6 +24,21 @@
                 </ul>
             </div>
         {% endif %}
+        
+        {% if directorates %}
+            <div class="key-details__section key-details__section--expertise">
+                <h4 class="body body--two key-details__sub-heading">Directorates</h4>
+                <ul class="key-details__list">
+                    {% for item in directorates %}
+                        <li class="key-details__list-item">
+                        {# Link here depends on the staff picker page #}
+                            <a href="{{ item.link }}" class="link link--tertiary">{{ item.title }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+        
         {% if areas %}
             <div class="key-details__section key-details__section--expertise">
                 <h4 class="body body--two key-details__sub-heading">Expertise</h4>
