--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
@@ -27,7 +27,7 @@
         
         {% if directorates %}
             <div class="key-details__section key-details__section--expertise">
-                <h4 class="body body--two key-details__sub-heading">Directorates</h4>
+                <h4 class="body body--two key-details__sub-heading">Directorate</h4>
                 <ul class="key-details__list">
                     {% for item in directorates %}
                         <li class="key-details__list-item">
