--- a/rca/project_styleguide/templates/patterns/molecules/profile-detail/profile-detail.html
+++ b/rca/project_styleguide/templates/patterns/molecules/profile-detail/profile-detail.html
@@ -32,9 +32,10 @@
             {% if item.first_name or item.name or staff_page %}
                 <div class="profile-detail__header">
                     {% if item.first_name or item.name %}
-                    <h3 class="profile-detail__heading heading heading--five">{% firstof item.first_name item.name %} {% firstof item.surname %}</h3>
+                    <h3 class="profile-detail__heading heading heading--five">
+                    {% firstof item.first_name item.name %} {% firstof item.surname %}</h3>
                     {% elif staff_page %}
-                        <h3 class="profile-detail__heading heading heading--five">{{ staff_page.first_name }} {{ staff_page.last_name }}</h3>
+                        <h3 class="profile-detail__heading heading heading--five">{% if staff_page.staff_title %}{{ staff_page.staff_title }} {% endif %}{{ staff_page.first_name }} {{ staff_page.last_name }}</h3>
                     {% endif %}
                 </div>
             {% endif %}
