Meta should read 'Guide' for guide pages if nothing else is found

--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
@@ -41,6 +41,8 @@
                             <p class="related-content__degree body body--two">{{ related_item.programme_type }}</p>
                         {% elif related_item.meta %}
                             <p class="related-content__degree body body--two">{{ related_item.meta }}</p>
+                        {% elif related_item.get_verbose_name == 'Guide page' %}
+                            <p class="related-content__degree body body--two">Guide</p>
                         {% endif %}
                     </div>
                     <p class="related-content__copy body body--two">
