Add 'display' value field for the telephone number
- Opted for a new field here so the phonenumber field still gets
validated but the displayed value can be words or numbers in any format

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--centre.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--centre.html
@@ -25,7 +25,7 @@
                 {% endif %}
                 {% if page.centre_tel %}
                     <li class="key-details__list-item">
-                        <p><a class="link link--tertiary" href="tel:{{ page.centre_tel }}">{{ page.centre_tel }}</a></p>
+                        <p><a class="link link--tertiary" href="tel:{{ page.centre_tel }}">{% firstof page.centre_tel_display_text page.centre_tel %}</a></p>
                     </li>
                  {% endif %}
                </ul>
