--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.html
@@ -52,7 +52,7 @@
     {% endif %}
     {% if sectors %}
         <div class="key-details__section key-details__section--tags">
-            <h4 class="body body--two key-details__sub-heading">Sectors</h4>
+            <h4 class="body body--two key-details__sub-heading">Sector</h4>
             <ul class="key-details__list">
                 {% for item in sectors %}
                     <li class="key-details__list-item">
