--- a/rca/project_styleguide/templates/patterns/molecules/upcoming-dates/upcoming-dates.html
+++ b/rca/project_styleguide/templates/patterns/molecules/upcoming-dates/upcoming-dates.html
@@ -4,33 +4,58 @@
         <div class="upcoming-dates__heading body body--two">End date</div>
     </div>
     <div class="upcoming-dates__content">
-        {% for item in access_planit_data %}
-            <div class="upcoming-dates__row">
-                <div class="upcoming-dates__row-item upcoming-dates__row-item--mobile" aria-hidden="true">{{ item.start_date|date:'d F Y' }} {% if item.end_date %}to {{ item.end_date|date:'d F Y' }}{% endif %}</div>
-                <div class="upcoming-dates__row-item upcoming-dates__start-date">{{ item.start_date|date:'d F Y' }}</div>
-                <div class="upcoming-dates__row-item upcoming-dates__end-date">{{ item.end_date|date:'d F Y' }}</div>
-                <div class="upcoming-dates__row-item upcoming-dates__action">
-                    {% if page.application_form_url %}
-                        <a href="{{ page.application_form_url }}" class="link link--tertiary link--link link--external" target="_blank">
-                            <span class="link__label">Apply</span>
-                            <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
-                        </a>
-                    {% else %}
-                        <a href="{{ item.book_now_url }}" class="link link--tertiary link--link link--external" target="_blank">
-                            <span class="link__label">Book</span>
-                            <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
-                        </a>
-                    {% endif %}
+        {% if page.get_manual_bookings %}
+            {% for item in  page.get_manual_bookings %}
+                <div class="upcoming-dates__row">
+                    <div class="upcoming-dates__row-item upcoming-dates__row-item--mobile" aria-hidden="true">{{ item.start_date|date:'d F Y' }} {% if item.end_date %}to {{ item.end_date|date:'d F Y' }}{% endif %}</div>
+                    <div class="upcoming-dates__row-item upcoming-dates__start-date">{{ item.start_date|date:'d F Y' }}</div>
+                    <div class="upcoming-dates__row-item upcoming-dates__end-date">{{ item.end_date|date:'d F Y' }}</div>
+                    <div class="upcoming-dates__row-item upcoming-dates__action">
+                        {% if item.register_interest_link %}
+                            <a href="{{ item.register_interest_link }}" class="link link--tertiary link--link link--external" target="_blank">
+                                <span class="link__label">Register interest</span>
+                                <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
+                            </a>
+                        {% else %}
+                            <a href="{{ item.booking_link }}" class="link link--tertiary link--link link--external" target="_blank">
+                                <span class="link__label">Book</span>
+                                <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
+                            </a>
+                        {% endif %}
+                    </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        {% else %}
+            {% for item in access_planit_data %}
+                <div class="upcoming-dates__row">
+                    <div class="upcoming-dates__row-item upcoming-dates__row-item--mobile" aria-hidden="true">{{ item.start_date|date:'d F Y' }} {% if item.end_date %}to {{ item.end_date|date:'d F Y' }}{% endif %}</div>
+                    <div class="upcoming-dates__row-item upcoming-dates__start-date">{{ item.start_date|date:'d F Y' }}</div>
+                    <div class="upcoming-dates__row-item upcoming-dates__end-date">{{ item.end_date|date:'d F Y' }}</div>
+                    <div class="upcoming-dates__row-item upcoming-dates__action">
+                        {% if page.application_form_url %}
+                            <a href="{{ page.application_form_url }}" class="link link--tertiary link--link link--external" target="_blank">
+                                <span class="link__label">Apply</span>
+                                <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
+                            </a>
+                        {% else %}
+                            <a href="{{ item.book_now_url }}" class="link link--tertiary link--link link--external" target="_blank">
+                                <span class="link__label">Book</span>
+                                <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
+                            </a>
+                        {% endif %}
+                    </div>
+                </div>
+            {% endfor %}
+        {% endif %}
     </div>
+
     <div class="upcoming-dates__footer">
         <div class="upcoming-dates__footer-action">
-            <a class="upcoming-dates__footer-link link link--tertiary" href='{{ register_interest_link }}'>Register your interest</a>
+            <a class="upcoming-dates__footer-link link link--tertiary" href='{% firstof page.manual_registration_url register_interest_link %}'>Register your interest</a>
         </div>
         {% comment %} <div class="upcoming-dates__footer-action">
             <a class="upcoming-dates__footer-link link link--tertiary" href='#'>View basket (2)</a>
         </div> {% endcomment %}
     </div>
+
 </div>
