Recommendation of sticking the programme booking bar to the top of the page

--- a/rca/static_src/sass/components/_booking-bar.scss
+++ b/rca/static_src/sass/components/_booking-bar.scss
@@ -74,8 +74,19 @@
     }
 
     .app--programme-page.sticky-bar & {
+        $tab-height-large: 60px;
         @include z-index(footer);
+        top: 0;
+        transform: translate3d(0, $tab-height-large, 0);
     }
+
+    .headroom--pinned.headroom--not-top.app--programme-page.sticky-bar & {
+        $tab-height-large: 60px;
+        $header-height-large: 80px;
+        $total-height-large: $tab-height-large + $header-height-large;
+        transform: translate3d(0, $total-height-large, 0);
+    }
+
     // Place on last item on the page, to compensate for transform on actual item
     &__last-item {
         margin-bottom: -$booking-bar-height-small;
