Use correct template block when overriding page title

--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
@@ -6,7 +6,7 @@
     app--staff-detail theme-light
 {% endblock %}
 
-{% block title_prefix %}
+{% block title %}
     {% if page.staff_title %}{{ page.staff_title }}{% endif %} {% if page.first_name %}{{ page.first_name }}{% endif %} {% if page.last_name %}{{ page.last_name }}{% endif %}
 {% endblock %}
 
