--- a/rca/static_src/sass/components/_pagination.scss
+++ b/rca/static_src/sass/components/_pagination.scss
@@ -15,8 +15,10 @@
         margin-left: $spacing;
 
         &--current {
-            @include underline-hover-target();
-            @include underline-hover-target-reset();
+            #{$root}__link {
+                @include underline-hover-target-reset();
+                font-family: $font--secondary;
+            }
         }
     }
 
