resolve all links being active on mobile

--- a/rca/static_src/sass/components/_pagination.scss
+++ b/rca/static_src/sass/components/_pagination.scss
@@ -29,6 +29,7 @@
 
     &__link {
         @include underline-hover();
+        background-size: 0% 2px;
         display: block;
         font-family: $font--primary;
         transition: color $cubic-transition;
