Adds video and image introduction fields

--- a/rca/project_styleguide/templates/patterns/pages/schools/school_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/school_page.html
@@ -25,6 +25,11 @@
         <div class="school-overview__key-details layout__start-one layout__span-two layout__@large-span-one">
             {% include "patterns/molecules/key-details/key-details--school.html" %}
         </div>
+
+         {% if page.introduction_image %}
+            {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=page.video out_of_grid=True curriculum=False heading=False has_meta=False copy=False subheading=False image=page.introduction_image caption=page.video_caption video=page.video %}
+        {% endif %}
+        {{ page.body|richtext }}
     </section>
 </div>
 {% endblock %}
