Adds statistics block

--- a/rca/project_styleguide/templates/patterns/pages/schools/school_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/school_page.html
@@ -79,6 +79,10 @@
             {% endfor %}
         {% endif %}
 
+        {% if stats_block %}
+            {% include "patterns/organisms/stat-block/stat-block.html" %}
+        {% endif %}
+
     </section>
 </div>
 {% endblock %}
